[package]
name = "jsonh_rs"
version = "1.0.0"
edition = "2024"
authors = ["Joyless"]
license = "MIT"
description = "JSON for Humans in Rust."
repository = "https://github.com/jsonh-org/JsonhRs"
readme = "../README.md"
keywords = ["JSONH", "JSON", "JSON5", "HJSON", "config"]

[dependencies]
serde_json = "1.0"
yield-return = "0.2.0"
